# mqtt-chat

./: README.md
chat-frontend/: angular.json  package-lock.json  package.json
chat-frontend/src/: index.html  styles.scss
chat-frontend/src/app/: app.component.html  app.component.ts  app.config.ts
chat-frontend/src/app/components/change-topic/: change-topic.component.html  change-topic.component.spec.ts  change-topic.component.ts
chat-frontend/src/app/components/message-send/: message-send.component.html  message-send.component.ts
chat-frontend/src/app/components/message-view/: message-view.component.html  message-view.component.ts
chat-frontend/src/app/service/: api.service.ts
chat-frontend/src/app/type/: types.ts
chat-frontend/src/app/util/: parser.ts
mqtt-chat-client/: .quartenv  pyproject.toml
mqtt-chat-client/src/mqtt_chat_client/: app.py  mqtt_client.py
